framework/src/main/java/org/example/framework/error/ErrorMessage.java
package org.example.framework.error;

public interface ErrorMessage {

}
